Created order form

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,17 @@
     <link rel="stylesheet" href="./styles.css">
     <script defer src="./script.js"></script>
 </head>
+
 <body>
-    
+    <div id="app">
+        <h1>Food Order List</h1>
+        <form id="orderForm">
+            <input type="text" id="orderInput" placeholder="Enter a food menu" required minlength="3">
+            <button type="submit">Add Order</button>
+        </form>
+    </div>
+    <div id="orderList"></div>
+    <p>Total order remaining: <span id="orderCount">0</span></p>
 </body>
+
 </html>
